--- a/Alg_Lab_1/Alg_Lab_1/Alg_Lab_1.vcxproj
+++ b/Alg_Lab_1/Alg_Lab_1/Alg_Lab_1.vcxproj
@@ -115,6 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Errors.h" />
     <ClInclude Include="screen.h" />
     <ClInclude Include="shape.h" />
   </ItemGroup>
