--- a/Alg_Lab_1/Alg_Lab_1/Alg_Lab_1.vcxproj.filters
+++ b/Alg_Lab_1/Alg_Lab_1/Alg_Lab_1.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="shape.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Errors.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
